进一步增加signin_game接口
